app/assets/stylesheets/pages/_event_show.scss
// main page container
.banner-event {
  color: white;
  text-align: center;
  height: 30vh;
  /* if you have a 70px navbar => height: calc(100vh - 70px); */
  background-size: cover !important;
  display: flex;
  align-items: center;
  justify-content: center;
}

.event-show-container {
margin: 0 30px;
min-height: calc(100vh - 70px - 70px);
max-width: 96%;

}

.event-line{
margin-top: 20px;
border-top: 1px solid #dce0e0;
margin-left: 25px;
max-width: 96%
}

.event-details-box {
  border: 1px solid #dce0e0;
  margin: -100px 15px 15px 23px;
  border-radius: 10px 10px;
  background-color: white;
}
.event-show-name {
padding-left: 15px;
color: #1d97c1;
}

.event-show-description {
font-weight: lighter;
}

.event-location {
padding-left: 15px;
margin-bottom: 20px;
}

.top-event-container{
margin-left: 20px;
margin-right: 25px;

}

.event-dates {
color: #5c696f;
}

.links-from-event-show-page {
margin-top: 20px;
text-align: center;
margin-bottom: 10px;
display: flex;
justify-content: flex-end;
}


.event-photo {
height: 200px;
width: 300px;
margin-left: auto;
margin-right: auto;//
padding: 0;
margin-bottom: 30px;

}

.photo-event {
  display: flex;
  justify-content: flex-end;

}

.event-log-title {
margin-top: 10px;
padding-left: 25px;
color: #1d97c1;

}


.inbox {
  border: 1px solid #dce0e0;
  padding: 0 20px;
  margin-top: 5px;
  max-width: 96%;
  margin-left: 24px;


}
.message {
  display: flex;
  align-items: center;
  padding: 10px;
  border-bottom: 1px solid rgba(220,224,244,0.4);
}
.message:last-child {
  border-bottom: none;
}
.message-body {
  flex-grow: 1;
}
.message-name {
  padding-left: 10px;
  min-width: 80px;
}

.message-date p {
  font-size: 13px;
  font-weight: lighter;
  opacity: 0.6;
  margin-top: 5px;
  margin-right: 20px;
}
.message-body {
  padding-left: 10px;
  font-size: 13px;
  color: rgba(0,0,0,0.7);
}
.message-body {
  padding-left: 20px;
  color: rgba(0,0,0,0.4);
  margin: 6px 0;
}

.message-status {
  font-size: 14px;
  text-align: center;
  opacity: 0.6;
  font-size: 13px;
}
.status {
  color: lightgrey;
  opacity: 0.6;

}

